--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,6 +67,9 @@ img {
 }
 .image {
     position: relative;
+    margin-bottom: 0;
+    padding: 0;
+    display: grid;
 }
 
 .image::after {
@@ -79,6 +82,7 @@ img {
     background-color: hsl(277, 91%, 32%);
     z-index: 100;
     opacity: 0.5;
+    border-radius: 0 10px 10px 0;
 }
 
 .text {
@@ -124,7 +128,8 @@ h2 + p {
     }
 
     .image::after {
-        height: 98.5%;
+        height: 100%;
+        border-radius: 10px 10px 0 0;
     }
 
     img {
