--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,7 +55,7 @@ p {
 .container{
     margin-top: 100px;
     background-color: hsl(244, 38%, 16%);
-    border-radius: 10px 0 0 10px;
+    border-radius: 10px;
     padding: 0;
 }
 
